--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-native-elements": "^0.19.1",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-navigation": "^2.16.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
     "turbo360": "^1.6.35"
   }
 }
