--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
     "turbo360": "^1.6.35"
   }
 }
