--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-input-prompt": "^1.0.0",
+    "react-native-maps": "^0.22.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
